add FilterMultiSelect Element, which is used in job filter for multiple select

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 }
+
+.MuiInputBase-root{
+	padding: 8px !important;
+}
+
+.MuiAutocomplete-endAdornment{
+	/* display: none; */
+}
